Fixed various console errors and added various spacing

--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,8 @@
   width: 100%;
   padding: 15px 20px;
 }
+
+.app-container {
+  max-width: 500px;
+  margin: 0 auto;
+}
